@@ -219,3 +219,35 @@ class MemoryMgmtTest(unittest.TestCase):
         for i in range_generator(100000):
             c = pycurl.Curl()
             c.reset()
+    
+    def test_opensocketfunction_collection(self):
+        # Note: extracting a context manager seems to result in
+        # everything being garbage collected even if the C code
+        # does not clear the callback
+        object_count = 0
+        gc.collect()
+        object_count = len(gc.get_objects())
+        
+        c = pycurl.Curl()
+        c.setopt(c.OPENSOCKETFUNCTION, lambda x: True)
+        del c
+        
+        gc.collect()
+        new_object_count = len(gc.get_objects())
+        self.assertEqual(new_object_count, object_count)
+    
+    def test_seekfunction_collection(self):
+        # Note: extracting a context manager seems to result in
+        # everything being garbage collected even if the C code
+        # does not clear the callback
+        object_count = 0
+        gc.collect()
+        object_count = len(gc.get_objects())
+        
+        c = pycurl.Curl()
+        c.setopt(c.SEEKFUNCTION, lambda x: True)
+        del c
+        
+        gc.collect()
+        new_object_count = len(gc.get_objects())
+        self.assertEqual(new_object_count, object_count)
